Fix for jumping menu

--- a/src/components/navbar.module.css
+++ b/src/components/navbar.module.css
@@ -6,7 +6,7 @@
     position: fixed;
     top: calc(100vh - var(--menuHeight));
     height: var(--menuHeight);
-    width: 100%;
+    width: 100vw;
     z-index: 99;
 }
 .nav .menuToggle {
